# rust-certitude

./: .travis.yml  Cargo.toml  LICENSE  NOTICES  README.md  appveyor.yml  build_docs.sh  search-index.js
appveyor/: build.bat
c-certitude/: Cargo.toml
c-certitude/src/: lib.rs
c-certitude/test/: test.c
c_certitude/: enum.ValidationResult.html  fn.validate_cert_chain.html  index.html  sidebar-items.js
certitude/: enum.ValidationResult.html  fn.validate_cert_chain.html  index.html  sidebar-items.js
certitude/platform/: fn.validate_cert_chain.html  sidebar-items.js
fixtures/certifi/: leaf.crt
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
rust-certitude/: Cargo.toml
rust-certitude/src/: lib.rs  osx.rs  platform.rs  windows.rs
src/: lib.rs  osx.rs  platform.rs  windows.rs
src/c_certitude/: lib.rs.html
src/certitude/: lib.rs.html  platform.rs.html
travis/: test.sh
