[package]
name = "certitude"
version = "0.1.0"
authors = ["Cory Benfield <lukasaoz@gmail.com>"]

[dependencies]
libc = "0.2"

[target.x86_64-pc-windows-gnu.dependencies]
crypt32-sys = "0.2"
winapi = "0.2"

[target.x86_64-pc-windows-msvc.dependencies]
crypt32-sys = "0.2"
winapi = "0.2"

[target.x86_64-apple-darwin.dependencies]
core-foundation = "0.2"
security-framework = "0.1.2"
