[package]
name = "c-certitude"
version = "1.1.0"
authors = ["Cory Benfield <lukasaoz@gmail.com>"]
description = "C-ABI for certificate validation logic for OS X and Windows."
documentation = "https://lukasa.co.uk/rust-certitude/c_certitude"
repository = "https://github.com/Lukasa/rust-certitude"
readme = "../README.md"
keywords = ["certificate", "validation", "tls", "ssl"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"

[dependencies.certitude]
path = "../rust-certitude"
version = "1.1"
