[package]
name = "certitude"
version = "1.0.1"
authors = ["Cory Benfield <lukasaoz@gmail.com>"]
description = "Certificate validation logic for OS X and Windows."
documentation = "https://lukasa.co.uk/rust-certitude/certitude"
repository = "https://github.com/Lukasa/rust-certitude"
readme = "../README.md"
keywords = ["certificate", "validation", "tls", "ssl"]
license = "MIT"

[lib]
doctest=false

[dependencies]
libc = "0.2"

[target.x86_64-pc-windows-gnu.dependencies]
crypt32-sys = "0.2"
winapi = "0.2"

[target.x86_64-pc-windows-msvc.dependencies]
crypt32-sys = "0.2"
winapi = "0.2"

[target.i686-pc-windows-gnu.dependencies]
crypt32-sys = "0.2"
winapi = "0.2"

[target.i686-pc-windows-msvc.dependencies]
crypt32-sys = "0.2"
winapi = "0.2"

[target.x86_64-apple-darwin.dependencies]
core-foundation = "0.2"
security-framework = "0.1.3"
